// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#121212",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#CF6679",
        "borderColor": "#262626",
        "borderRadius": 11,
        "borderWidth": 1,
        "justifyContent": "center",
        "padding": 60,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "textAlign": "center",
          },
          Object {
            "fontSize": 22,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Sorry something went wrong
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "textAlign": "center",
          },
          Object {
            "fontSize": 18,
            "marginTop": 4,
          },
        ]
      }
    >
      Technical Error message
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "textAlign": "center",
          },
          Object {
            "fontSize": 16,
            "fontStyle": "italic",
            "marginTop": 4,
          },
        ]
      }
    >
      "
      Test erroor message
      "
    </Text>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#BB86FC",
          "borderRadius": 4,
          "elevation": 3,
          "justifyContent": "center",
          "marginHorizontal": 12,
          "marginTop": 16,
          "marginVertical": 6,
          "paddingHorizontal": 32,
          "paddingVertical": 12,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#000000",
            "fontSize": 16,
            "fontWeight": "bold",
            "letterSpacing": 0.25,
            "lineHeight": 21,
          }
        }
      >
        Let's start over
      </Text>
    </View>
  </View>
</View>
`;

exports[`Testing all components for the weather screen Sunshine renders correctly 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#262626",
      "borderColor": "#262626",
      "borderRadius": 11,
      "borderWidth": 1,
      "margin": 8,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontSize": 12,
            "marginLeft": 16,
            "textAlign": "center",
          }
        }
      >
        SUNRISE
      </Text>
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "flex": 1,
            "fontSize": 15,
            "marginRight": 16,
            "textAlign": "right",
          }
        }
      >
        0700AM
      </Text>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontSize": 12,
            "marginLeft": 16,
            "textAlign": "center",
          }
        }
      >
        SUNSET
      </Text>
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "flex": 1,
            "fontSize": 15,
            "marginRight": 16,
            "textAlign": "right",
          }
        }
      >
        0700PM
      </Text>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontSize": 12,
            "marginLeft": 16,
            "textAlign": "center",
          }
        }
      >
        LENGTH OF DAY
      </Text>
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "flex": 1,
            "fontSize": 15,
            "marginRight": 16,
            "textAlign": "right",
          }
        }
      >
        12 Hrs 0 min
      </Text>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontSize": 12,
            "marginLeft": 16,
            "textAlign": "center",
          }
        }
      >
        REMAINING DAYLIGHT
      </Text>
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "flex": 1,
            "fontSize": 15,
            "marginRight": 16,
            "textAlign": "right",
          }
        }
      >
        10 Hrs 2 min
      </Text>
    </View>
  </View>
</View>
`;

exports[`WeatherNow renders correctly 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#262626",
      "borderColor": "#262626",
      "borderRadius": 11,
      "borderWidth": 1,
      "margin": 8,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#262626",
        "flexDirection": "row",
        "padding": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
              "textAlign": "center",
            }
          }
        >
          DESCRIPTION
        </Text>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 15,
              "textAlign": "center",
            }
          }
        >
          CLOUDY
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
              "textAlign": "center",
            }
          }
        >
          PRESSURE
        </Text>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 15,
              "textAlign": "center",
            }
          }
        >
          1000 hPa
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
              "textAlign": "center",
            }
          }
        >
          HUMIDITY
        </Text>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 15,
              "textAlign": "center",
            }
          }
        >
          30%
        </Text>
      </View>
    </View>
  </View>
</View>
`;
